Vocabularies: Split the administration backend so that each mapping has it's own section (rather than vertical tabs all in one section), both for the general settings and the updates. Change the way the update forms work by making each update it's own form rather than try to have a larger form that handles multiple updates - this was too error prone. This covers #3158, fixes an issue reported in #3065 and paves the way for #3156
Former-commit-id: 869af6d1ba77e2cd6c7e6de75b450794ef361566

--- a/sites/all/modules/custom/scratchpads/scratchpads_vocabularies/theme/scratchpads_vocabularies.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_vocabularies/theme/scratchpads_vocabularies.css
@@ -1,17 +1,13 @@
-#scratchpads-vocabularies-mapping-form div.scratchpads_vocabularies_info {
+#scratchpads-vocabularies-admin-form div.scratchpads_vocabularies_info {
   margin-bottom: 1em;
 }
 
-#scratchpads-vocabularies-mapping-form div.scratchpads_vocabularies_info fieldset {
-  margin-top: 1em;
-}
-
-#scratchpads-vocabularies-mapping-form fieldset div.fieldset-content input.form-submit,
-#scratchpads-vocabularies-mapping-form fieldset div.fieldset-content .vocabularies_status {
+#scratchpads-vocabularies-admin-form fieldset div.fieldset-content input.form-submit,
+#scratchpads-vocabularies-admin-form fieldset div.fieldset-content .vocabularies_status {
   margin-right: 1em;
 }
 
-#scratchpads-vocabularies-mapping-form #edit-all-updates {
+#scratchpads-vocabularies-admin-form #edit-all-updates {
   margin-bottom: 1em;
 }
 
